Select Similar: Area precission problem in small scale geometry (should take Units into account?) #87823

Closed
opened 2021-04-26 13:10:29 +02:00 by george b · 9 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.92

Blender Version
Broken: version: 2.93.0 Beta, branch: master, commit date: 2021-04-25 22:55, hash: db3b610040
Worked: unknown

Currently it's impossible to select only faces with exactly or less area than the selected face.
I attached a fully triangulated surface chunk that comes from a photogrametry process. The units are set to centimeters and object scale is 1.area_selection.png
area_selection.blend

Exact steps for others to reproduce the error
Enter Edit mode and select a 0 area face in the example file as shown in the pics.
Run Select\Select Similar\ by Area.
set Compare to Equal or Less
set Treshold to 0 or a small value like 0.03

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.92 **Blender Version** Broken: version: 2.93.0 Beta, branch: master, commit date: 2021-04-25 22:55, hash: `db3b610040` Worked: unknown Currently it's impossible to select only faces with exactly or less area than the selected face. I attached a fully triangulated surface chunk that comes from a photogrametry process. The units are set to centimeters and object scale is 1.![area_selection.png](https://archive.blender.org/developer/F10039010/area_selection.png) [area_selection.blend](https://archive.blender.org/developer/F10038994/area_selection.blend) **Exact steps for others to reproduce the error** Enter Edit mode and select a 0 area face in the example file as shown in the pics. Run Select\Select Similar\ by Area. set Compare to Equal or Less set Treshold to 0 or a small value like 0.03
Author

Added subscriber: @GeRo

Added subscriber: @GeRo
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm this on the latest 3.0.0 Alpha, branch: master, commit date: 2021-04-26 05:52, hash: c63142ca8f.

I can confirm this on the latest 3.0.0 Alpha, branch: master, commit date: 2021-04-26 05:52, hash: `c63142ca8f`.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

This seems to be a precission problem.
Scaling the mesh by ten for example gives the correct result.
It might be good to take Units into account in area calculation (BM_face_calc_area_with_mat3) though?

This seems to be a precission problem. Scaling the mesh by ten for example gives the correct result. It might be good to take Units into account in area calculation (`BM_face_calc_area_with_mat3`) though?
Member

I think users expect to get more precision if they choose a smaller unit, no?

I think users expect to get more precision if they choose a smaller unit, no?
Philipp Oeser changed title from Select Similar: Area broken to Select Similar: Area precission problem in small scale geometry (should take Units into account?) 2021-04-27 11:09:04 +02:00

This issue was referenced by 7a475a89eb

This issue was referenced by 7a475a89eb398ca5f42ddfdef3c04aa8051858f2

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2021-04-29 09:21:23 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87823
No description provided.